# SCLP-master-work-code

./: .gitignore  CMakeLists.txt  README.md
Block_Elements_Numbers/: Block_Elements_Numbers.cpp  Block_Elements_Numbers.h  CMakeLists.txt
Blocks/: CMakeLists.txt
Blocks/Block/: Block.cpp  Block.h  CMakeLists.txt
Blocks/Complex_Block/: CMakeLists.txt  Complex_Block.cpp  Complex_Block.h
Blocks/Incomplete_Complex_Blocks/: CMakeLists.txt
Blocks/Simple_Block/: CMakeLists.txt  Simple_Block.cpp  Simple_Block.h
Box/: Box.cpp  Box.h  CMakeLists.txt
Box_Generators/: Box_Generators.cpp  Box_Generators.h  CMakeLists.txt
Container/: CMakeLists.txt  Container.cpp  Container.h  Container_Anchored_Free_Space.cpp  Container_Free_Space.cpp
Element_3D/: CMakeLists.txt  Element_3D.cpp  Element_3D.h
Elements_Group/: CMakeLists.txt  Elements_Group.cpp  Elements_Group.h
Free_Spaces/: CMakeLists.txt
Free_Spaces/Free_Space/: CMakeLists.txt  Free_Space.cpp  Free_Space.h
Free_Spaces/Shared_Free_Space/: CMakeLists.txt  Shared_Free_Space.cpp  Shared_Free_Space.h
Insertable_Element/: CMakeLists.txt  Insertable_Element.cpp  Insertable_Element.h
Insertion_Coordinates/: A_Insertion_Coordinates.cpp  A_Insertion_Coordinates.h  Block_Insertion_Coordinates.cpp  Block_Insertion_Coordinates.h  Box_Insertion_Coordinates.cpp  Box_Insertion_Coordinates.h  CMakeLists.txt  I_Coordinates_Displayer.h  Insertion_Coordinates.cpp  Insertion_Coordinates.h  Insertion_Coordinates_Displayer.cpp  Insertion_Coordinates_Displayer.h  Insertion_Coordinates_Factory.cpp  Insertion_Coordinates_Factory.h  Visualisation_Coordinates_Displayer.cpp  Visualisation_Coordinates_Displayer.h
Packer/: A_Packer.cpp  A_Packer.h  CMakeLists.txt  Packer.cpp  Packer.h  Parallel_Tree_Packer.cpp  Parallel_Tree_Packer.h  Scenerio_Tree_Packer.cpp  Scenerio_Tree_Packer.h
Packer_Parser/: CMakeLists.txt  Packer_Parser.cpp  Packer_Parser.h  json_parser.cpp  json_parser.h
Points/: CMakeLists.txt
Points/Point_2D/: CMakeLists.txt  Point_2D.cpp  Point_2D.h
Points/Point_3D/: CMakeLists.txt  Point_3D.cpp  Point_3D.h
Tests/: CMakeLists.txt  Test.cpp  Test.h  main.cpp
Trials/: CMakeLists.txt  Trials.cpp  Trials.h  main.cpp
Visitor/: CMakeLists.txt  Visitor.cpp  Visitor.h
main/: CMakeLists.txt  main.cpp
